--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
+node_modules
+bower_components
+.idea
+*.iml
+target
